# Fist-Axum-SSR

./: Cargo.toml  README.md
assets/css/: about.css  header.css  home.css  style.css  users.css
assets/js/: home.js  users.js
css/: about.css  body.css  header.css  home.css  loading.css  not_found.css  style.css  users.css
htmls/: about.html  header-default.html  header-user.html  header.html  home-default.html  home.html  not-found.html  users.html
js/: home.js  users.js
src/: main.rs  pages.rs  utils.rs
src/api/: mod.rs
src/api/config/: database.rs  mod.rs  session.rs
src/api/items/: mod.rs  user.rs
src/config/: errors.rs  mod.rs
src/elements/: about.rs  about_body.rs  body.rs  header.rs  home.rs  home_body.rs  loading.rs  mod.rs  not_found.rs  not_found_body.rs  users.rs
src/models/: mod.rs  user.rs
src/pages/: about.rs  homepage.rs  mod.rs  not_found.rs
src/utils/: mod.rs
templates/: about.html  base.html  home.html  not-found.html  users.html
templates/components/: loading.html
templates/queries/: users.pgsql
