[package]
name = "first-axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.15"
serde = "1.0.160"
tokio = { version = "1.27", features = ["full"] }
tower-http = { version = "0.4.0",  features = ["full"] }
