[package]
name = "first-axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.16"
serde = {version = "1.0.160", features=["derive"]}
serde_json = "1.0.96"
axum-sessions = "0.5.0"
tokio = { version = "1.27", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.4.0",  features = ["full"] }
sqlx = { version = "0.6.3", features = [ "runtime-async-std-native-tls", "postgres", "json" ] }
tracing = "0.1.37"
tracing-subscriber = { version="0.3.17", features = ["env-filter"] }
thiserror = "1.0.40"
regex = "1.8.1"
tera = "1.18.1"
lazy_static = "1.4.0"
tower-web = "0.3.7"
tokio-postgres = "0.7.8"
tower-cookies = "0.9.0"
uuid = "1.3.1"
dotenv = "0.15.0"
